# rustbot

./: Cargo.toml  consts.py  main.py
src/: attack.rs  hotkey.rs  information.rs  main.rs  model.rs  movement.rs  screen.rs  waypoints.rs
