[package]
name = "Jackthebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
captrs = "0.3.1"
shuteye = "0.3.3"
rodio = "0.20.1"

[profile.dev]
opt-level = 1 # Overrides the default of 0